Fix spacing

--- a/public/application.css
+++ b/public/application.css
@@ -55,6 +55,7 @@
   font-weight: 700;
   grid-area: name;
   line-height: 150%;
+  margin: 0;
   padding: 0 0.625rem;
 }
 
@@ -66,6 +67,7 @@
   grid-area: price;
   line-height: 1.25rem;
   letter-spacing: -0.015rem;
+  margin: 0;
   text-align: right;
 }
 
@@ -75,6 +77,7 @@
   font-weight: 400;
   grid-area: description;
   line-height: 150%;
+  margin: 0.5rem 0 1.25rem;
 }
 
 .purchase-date {
